// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ML Confirm Job Delete shallow renders without errors 1`] = `
<EuiConfirmModal
  buttonColor="danger"
  cancelButtonText="Cancel"
  confirmButtonText="Delete"
  data-test-subj="uptimeMLJobDeleteConfirmModel"
  defaultFocusedButton="confirm"
  onCancel={[MockFunction]}
  onConfirm={[MockFunction]}
  title="Delete anomaly detection job?"
>
  <p>
    <FormattedMessage
      defaultMessage="Are you sure you want to delete this job?"
      id="xpack.uptime.monitorDetails.ml.confirmDeleteMessage"
      values={Object {}}
    />
  </p>
  <p>
    <FormattedMessage
      defaultMessage="Deleting a job can be time consuming. It will be deleted in the background and data may not disappear instantly."
      id="xpack.uptime.monitorDetails.ml.deleteJobWarning"
      values={Object {}}
    />
  </p>
</EuiConfirmModal>
`;

exports[`ML Confirm Job Delete shallow renders without errors while loading 1`] = `
<EuiConfirmModal
  buttonColor="danger"
  cancelButtonText="Cancel"
  confirmButtonText="Delete"
  data-test-subj="uptimeMLJobDeleteConfirmModel"
  defaultFocusedButton="confirm"
  onCancel={[MockFunction]}
  onConfirm={[MockFunction]}
  title="Delete anomaly detection job?"
>
  <p>
    <FormattedMessage
      defaultMessage="Deleting jobs..."
      id="xpack.uptime.monitorDetails.ml.deleteMessage"
      values={Object {}}
    />
    )
  </p>
  <EuiLoadingSpinner
    size="xl"
  />
</EuiConfirmModal>
`;
